Update style.css fixing the contrast

--- a/style/style.css
+++ b/style/style.css
@@ -125,6 +125,21 @@ html {
     background-color: #0ff !important;
     box-shadow: 0 0 18px #0ff, 0 0 36px #ff00ff;
 }
+ 
+/* Reduce magenta glow on major containers */
+.neo-noir .sections,
+.neo-noir .properties-subdiv,
+.neo-noir #what_subdiv > div,
+.neo-noir .navbar {
+    box-shadow: 0 0 3px #ff00ff, 0 1px 3px #ff00ff;
+}
+
+/* Improve text contrast in properties-subdiv */
+.neo-noir .properties-subdiv h1,
+.neo-noir .properties-subdiv p {
+    color: #0ff !important;
+    text-shadow: 0 0 2px #fff;
+}
 
 /* Light Theme */
 .light {
